# ure

./: .gitignore  README.md  devenv-setup.sh  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  publish_new_versions.yml
epiparsing/: __init__.py  extra.py
test/: conftest.py  test_match_all.py  test_match_first.py  test_match_n_to_m.py  test_optional.py  test_simple.py
test/examples/base/: test_dbus_types.py
test/examples/cstpath/: test_path.py
test/examples/peg/: test_cassandra_nodetool_gossip.py  test_dbus.py  test_key_val.py  test_psaux.py  test_sepval.py  test_timed.py  test_timexpr.py
test/peg/: conftest.py  test_compile.py  test_fun.py  test_inline.py  test_native.py  test_peg_syntax.py  test_simple_pegparser.py
test/test_extra/: test_between.py  test_delim_list.py  test_ip.py  test_numbers.py
ure/: __init__.py  __version__.py  extra.py  peg.py
